[tool.poetry]
name = "database-tools"
version = "0.1.0"
description = "For compiling MIMIC-III waveform data into an ML ready database."
authors = ["Cameron Johnson"]
license = "MIT"
readme = "README.md"
packages = [{include = "database_tools"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.2"
pandas = "^1.4.4"
jupyter = "^1.0.0"
scikit-learn = "^1.1.2"
tabulate = "^0.8.10"
plotly = "^5.10.0"
tqdm = "^4.64.1"
openpyxl = "^3.0.10"
scipy = "^1.9.1"
neurokit2 = "==0.2.0"
heartpy = "==1.2.7"
wfdb = "==3.4.1"
ipywidgets = "==7.7.1"
jupyterlab-widgets = "==1.1.1"
widgetsnbextension = "==3.6.1"
pymongo = "==4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
