[tool.poetry]
name = "database-tools"
version = "0.1.0"
description = "For compiling MIMIC-III waveform data into an ML ready database."
authors = ["Cameron Johnson"]
license = "MIT"
readme = "README.md"
packages = [{include = "database_tools"}]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
jupyter = "^1.0.0"
scikit-learn = "^1.1.2"
tabulate = "^0.9.0"
plotly = "^5.10.0"
tqdm = "^4.64.1"
openpyxl = "^3.0.10"
scipy = "^1.9.3"
neurokit2 = "^0.2.1"
heartpy = "^1.2.7"
wfdb = "^4.0.0"
ipywidgets = "==7.7.1"
jupyterlab-widgets = "==1.1.1"
widgetsnbextension = "==3.6.1"
wandb = "^0.13.4"
tensorflow = "==2.9.2"
keras = ">=2.9.0rc0,<2.10.0"
vitaldb = "^1.2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
