[tool.poetry]
name = "heartfelt-tools"
version = "1.8.0"
description = "Extract and process photoplethysmography and arterial blood pressure data from mimic3-waveforms and vitaldb."
authors = ["Cameron Johnson"]
license = "MIT"
readme = "README.md"
packages = [{include = "database_tools"}]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
scikit-learn = "^1.1.2"
tabulate = "^0.9.0"
plotly = "^5.10.0"
tqdm = "^4.64.1"
openpyxl = "^3.0.10"
scipy = "^1.9.3"
neurokit2 = "^0.2.1"
heartpy = "^1.2.7"
wfdb = "^4.0.0"
tensorflow = "==2.9.2"
vitaldb = "^1.2.10"
pytest = "^7.2.1"
alive-progress = "^3.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipywidgets = "==7.7.1"
jupyterlab-widgets = "==1.1.1"
widgetsnbextension = "==3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:wfdb.*",
]